--- a/app/src/main/res/layout/nav_head.xml
+++ b/app/src/main/res/layout/nav_head.xml
@@ -10,7 +10,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_marginTop="15dp"
-        android:src="@drawable/person"
+        android:src="@drawable/profile"
         app:civ_border_color="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.311"
