--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -7,7 +7,7 @@
     android:title= "friends"/>
 
 
-    <item android:id="@+id/profileFragment"
+    <item android:id="@+id/profilesFragment"
         android:icon="@drawable/profile"
         android:title= "profile"/>
 
